--- a/HTTP_Demo/.project
+++ b/HTTP_Demo/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>HTTP_Demo</name>
+	<name>ICP_HTTP_DemoApp</name>
 	<comment></comment>
 	<projects>
 	</projects>
